--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -38,7 +38,14 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+
+  // Catalearn colours
+  main: #4fd2c2,
+  catalearn_secondary: #6562a7,
+  catalearn_grey: #f5f5f5,
+  catalearn_background: #69c4c7,
+  catalearn_green: #5fb611
 );
 
 
@@ -54,7 +61,7 @@ $colors: (
 // Material Design only Sass variables can go here
 
 // Use the primary color as the background for the toolbar-md-background
-$toolbar-md-background:                   color($colors, primary);
+$toolbar-md-background:                   color($colors, catalearn_background);
 
 // Change the color of the segment button text
 $toolbar-md-active-color:                 #fff;
