--- a/src/app/app.html
+++ b/src/app/app.html
@@ -8,7 +8,21 @@
 
     <ion-content>
       <ion-list>
-        <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
+        <ion-list-header>
+          Account
+        </ion-list-header>
+        <button menuClose ion-item *ngFor="let p of authPages" (click)="openPage(p)">
+          <ion-icon item-left large [name]="p.icon"></ion-icon>
+          {{p.title}}
+        </button>
+      </ion-list>
+
+      <ion-list>
+        <ion-list-header>
+          Catalearn
+        </ion-list-header>
+        <button menuClose ion-item *ngFor="let p of loggedInPages" (click)="openPage(p)">
+          <ion-icon item-left large [name]="p.icon"></ion-icon>
           {{p.title}}
         </button>
       </ion-list>
