--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,13 +34,15 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
-  secondary:  #32db64,
-  danger:     #f53d3d,
-  light:      #f4f4f4,
+  primary:    #0275d8,
+  secondary:  #5cb85c,
+  danger:     #d9534f,
+  light:      #999,
   dark:       #222,
 
   // Catalearn colours
+  info: #5bc0de,
+  warning: #f0ad4e,
   main: #4fd2c2,
   catalearn_secondary: #6562a7,
   catalearn_grey: #f5f5f5,
@@ -61,7 +63,7 @@ $colors: (
 // Material Design only Sass variables can go here
 
 // Use the primary color as the background for the toolbar-md-background
-$toolbar-md-background:                   color($colors, catalearn_background);
+$toolbar-md-background:                   color($colors, primary);
 
 // Change the color of the segment button text
 $toolbar-md-active-color:                 #fff;
