after logout redirects to root login page

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -29,7 +29,7 @@
         </ng-container>
       </ion-list>
 
-      <ion-list>
+      <ion-list *ngIf="isAuthenticated">
         <ion-list-header>
           Catalearn
         </ion-list-header>
